@@ -45,11 +45,12 @@ struct _GimpCurvesTool
   gboolean              alpha;
   GimpHistogramChannel  channel;
 
-  gint                  grab_point;
+  gint                  selected;
   gint                  last;
   gint                  leftmost;
   gint                  rightmost;
   gint                  col_value[5];
+  gboolean              grabbed;
 
   GimpHistogram        *hist;
 
